styles.css
* {
    cursor: url("blue_pixel.png") 16 16, auto;
}

@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Audiowide&family=Syncopate:wght@400;700&family=VT323&family=Press+Start+2P&display=swap");
@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");

body {
  font-family: 'Share Tech Mono', monospace;
}

h1 {
  font-family: "Times New Roman", Times, serif;
  font-stretch: condensed; 
  font-size: x-large;
  letter-spacing: -0.5px;
  color: #92e0f8
}

.about_me {
    font-family: 'Share Tech Mono', monospace;
    font-size: medium;
    display: flex;
    width: 450px;
    justify-content: center;
    margin: 0 auto;
    text-align: center;
}

.header_container {
    display: flex;
    flex-direction: column; 
    align-items: center;
}

.pfp {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    overflow: hidden;
    object-fit: cover;
    margin-top: 40px;
}

.pfp img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.bottom_icons {
    position: fixed;
    bottom: 0;
    margin-bottom: 40px;
    left: 50%;
    padding: 8px;
    justify-content: space-evenly;
    height: 50px;
    display: flex;
    border-radius: 12px;
    transform: translateX(-50%);
    align-items: center;
    width: 200px;
    gap: 25px;
}

.linkedin_redirect img {
    width: 50px;
    height: 50px;
}

.linkedin_redirect:hover {
    transform: scale(1.05);
}

.github_redirect img {
    width: 40px;
    height: 40px;
}

.github_redirect:hover {
    transform: scale(1.05);
}

.contact_me img {
    width: 40px;
    height: 40px;
}

.contact_me:hover {
    transform: scale(1.05);
}

.project:hover {
    transform: scale(1.05);
    background: #1b1b1b;
}

.project {
    display: border;
    width: 450px;
    padding: 10px;
    min-height: 75px;
    text-align: center;
    margin-right: 5px;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    margin-top: 25px;;
    background-color: black;
    border-radius: 12px;
    color: white;
    padding-top: 1px;
    font-family: 'VT323', monospace;
    font-size: small;
}

.project img {
    float: left;
    margin-top: 17px;
    width: 55px;
    height: auto;
}


.modal {
    display: flex;
    align-items: center;
    background: black;
}

.modal_content {
    overflow-y: auto;
    border-radius: 8px;
}

.hidden {
    display: none;    
}

